--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 				</p>
 				<div class="chcon">
 					<dl>
-					<dt>Coffee</dt>
-					<dd>Black hot drink</dd>
-					<dt>Milk</dt>
-					<dd>White cold drink</dd>
+					<dt>Reinforce</dt>
+					<dd>Assault</dd>
+					<dt>Reinforce</dt>
+					<dd>Technical</dd>
 					</dl>
 				</div>
 
